// Copyright 2020-2021 Voxel Labs, Inc.
// All rights reserved.
//
// This document may not be reproduced, republished, distributed, transmitted,
// displayed, broadcast or otherwise exploited in any manner without the express
// prior written permission of Voxel Labs, Inc. The receipt or possession of this
// document does not convey any rights to reproduce, disclose, or distribute its
// contents, or to manufacture, use, or sell anything that it may describe, in
// whole or in part.

syntax = "proto3";

package protos.perception.structs.v1;

option go_package = "github.com/voxel-ai/voxel/protos/perception/structs/v1;structspb";

import "protos/perception/structs/v1/tracklet.proto";


message Vignette {
    repeated Tracklet tracklets = 1;
    int64 present_timestamp_ms = 2;
}